--- a/style.css
+++ b/style.css
@@ -18,18 +18,18 @@ ul {
 }
 
 body {
-  max-width: 100vw;
   min-height: 100vh;
   display: grid;
   grid-template-rows: 70px 100px auto;
-  background-color: rgb(196, 196, 196);
+  background-color: rgb(45, 45, 45);
 }
 
 header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(204, 204, 204);
+  background-color: rgb(0, 0, 0);
+  color: white;
   font-weight: 650;
   margin-bottom: 15px;
 }
@@ -89,6 +89,9 @@ p i{
 
 .centrado {
   text-align: center;
+  color: white;
+  margin-bottom: 10px;
+  font-weight: 500;
 }
 
 #eliminar-btn{
