--- a/style.css
+++ b/style.css
@@ -19,27 +19,39 @@ ul {
 
 body {
   min-height: 100vh;
-  display: grid;
-  grid-template-rows: 70px 100px auto;
   background-color: rgb(45, 45, 45);
 }
 
+#main-lista{
+  display: grid;
+  grid-template-rows: 50px auto auto;
+}
+
 header {
+  height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(0, 0, 0);
   color: white;
   font-weight: 650;
-  margin-bottom: 15px;
 }
 
 nav {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+}
+
+nav img{
+  width: 80px;
+  margin: 8px 0px;
+}
+nav a{
+  display: flex;
+  align-items: center;
 }
 
 #conteiner-selector {
@@ -88,9 +100,11 @@ p i{
 }
 
 .centrado {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   color: white;
-  margin-bottom: 10px;
   font-weight: 500;
 }
 
@@ -125,6 +139,7 @@ p i{
   justify-content: end;
   align-items: center;
   text-align: center;
+  
 }
 
 form {
