--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   background-color: rgb(45, 45, 45);
 }
 
-#main-lista{
+#main-lista {
   display: grid;
   grid-template-rows: 50px auto auto;
 }
@@ -45,11 +45,11 @@ nav {
   flex-wrap: wrap;
 }
 
-nav img{
+nav img {
   width: 80px;
   margin: 8px 0px;
 }
-nav a{
+nav a {
   display: flex;
   align-items: center;
 }
@@ -68,36 +68,24 @@ nav a{
   padding: 6px 10px 6px 0px;
 }
 
-#conteiner-cancion-objeto {
-  display: grid;
-  grid-template-columns: 20% auto 60px;
-  margin: 5px;
-  padding: 5px;
-  border-radius: 5px;
-  background-color: rgb(156, 156, 156);
-}
-
-#conteiner-cancion-objeto img {
+.iframe-spotify{
   width: 100%;
-  height:100%;
-  border-radius: 2px;
 }
 
-#tituloYNombre {
-  margin-left: 1em;
-  display: grid;
-  font-weight: 400;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-
-#tituloYNombre p {
+.conteiner-cancion-objeto{
   display: flex;
-  align-items: center;
+  margin: 0 8px;
+  gap: 5px;
 }
 
-p i{
-  margin-right: 5px;
-}
+
+
+
+
+
+
+
+
 
 .centrado {
   display: flex;
@@ -108,24 +96,24 @@ p i{
   font-weight: 500;
 }
 
-#eliminar-btn{
+.eliminar-btn {
+  width: 30px;
+  height: 30px;
   cursor: pointer;
-  width:50px;
-  height: 50px;
   background-color: rgb(255, 255, 255);
   border: 1px solid black;
   text-align: center;
   border-radius: 3px;
 }
 
-#btn-agregar{
+.btn-agregar {
   cursor: pointer;
   margin-top: 8px;
   background-color: rgb(255, 255, 255);
   border: 1px solid black;
 }
 
-#boton-borrar {
+.boton-borrar {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -139,7 +127,6 @@ p i{
   justify-content: end;
   align-items: center;
   text-align: center;
-  
 }
 
 form {
@@ -151,6 +138,7 @@ form {
   border-radius: 5px;
 }
 
-form p, form button  {
+form p,
+form button {
   margin-bottom: 7px;
 }
