--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul {
 
 body {
   min-height: 100vh;
-  background-color: rgb(45, 45, 45);
+  background-color: #F6F3CC;
 }
 
 #main-lista {
@@ -32,8 +32,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  background-color: #D4CEB0;
+  color: rgb(0, 0, 0);
   font-weight: 650;
 }
 
@@ -92,7 +92,7 @@ nav a {
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: 500;
 }
 
